# define

./: README.md  define.cabal
src/: Main.hs
